--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
-    "@choc-ui/chakra-autocomplete": "^5.3.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/poppins": "^5.0.13",
+    "@mui/material": "^5.15.15",
     "@tanstack/react-query": "^5.28.14",
     "axios": "^1.6.8",
-    "framer-motion": "^11.0.24",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
