--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,8 @@
       "@pages/*": ["src/pages/*"],
       "@utils/*": ["src/utils/*"],
       "@api/*": ["src/api/*"],
-      "@styles/*": ["src/styles/*"]
+      "@styles/*": ["src/styles/*"],
+      "@contexts/*": ["src/contexts/*"]
     }
   },
   "exclude": ["node_modules"]
