--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/poppins": "^5.0.13",
     "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.2.0",
     "@tanstack/react-query": "^5.28.14",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
