--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.28.14",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "esri-leaflet-geocoder": "^3.1.4",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
