--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0",
     "zod": "^3.22.4"
