--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/material": "^5.15.15",
     "@mui/x-date-pickers": "^7.2.0",
     "@tanstack/react-query": "^5.28.14",
+    "@turf/turf": "^7.0.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "esri-leaflet-geocoder": "^3.1.4",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
